fix z-index issue

--- a/author-control/styles.css
+++ b/author-control/styles.css
@@ -1,6 +1,6 @@
 :host {
   display: flex;
-  contain: layout style;
+  contain: style;
   max-width: 100%;
 }
 
